--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,62 +1,59 @@
 .client__container {
-    height: 372px;
-    max-width: 100%;
+  height: 372px;
+  max-width: 100%;
+}
+
+.client__list {
+  padding: 0;
+  height: 184px;
+  max-width: 1170px;
+  display: flex;
+  align-self: center;
+  justify-content: space-between;
+}
+
+.client__icon {
+  height: 60px;
+  width: 106px;
+  fill: $iconColor;
+  &:hover,
+  &:focus {
+    fill: $accentColor;
   }
-  
-  .client__list {
-    padding: 0;
-    height: 184px;
-    max-width: 1170px;
-    display: flex;
-    align-self: center;
-    justify-content: space-between;
-  }
-  
-  .client__icon {
-    height: 60px;
-    width: 106px;
-  }
-  
-  .client__item {
-    height: 92px;
-    width: 170px;
-    border: 1px solid var(--color-border);
-    border-radius: 4px;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .client__link {
-    width: 100%;
-    height: 100%;
-    fill: var(--color3);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: fill 500ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .client__icon:hover {
-    --color4: var(--color-four);
-    fill: var(--color-four);
-  }
-  
-  .client__item:hover {
+}
+
+.client__item {
+  height: 92px;
+  width: 170px;
+  border: 1px solid $borderColor;
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &:hover,
+  &:focus {
     cursor: pointer;
-    border: 1px solid var(--color-four);
+    border: 1px solid $accentColor;
   }
-  
-  
-  .container__heading {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-    color: #212121;
-    display: flex;
-    justify-content: center;
-  }
-  
-  
+}
+
+.client__link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: $accentColor;
+  transition: fill 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.container__heading {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  color: $secondaryColor;
+  display: flex;
+  justify-content: center;
+}
