--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,73 +1,65 @@
-  
-  .baner {
-    background-color: #2f303a;
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../images/photo00.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    font-weight: 900;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    height: 600px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-  }
-  
-  .baner__content {
-    font-size: 44px;
-    width: 696px;
-    text-transform: uppercase;
-    color: #ffffff;
-    text-align: center;
-  }
+.baner {
+  background-image: linear-gradient($gradientOverlay, $gradientOverlay),
+    url(../images/photo00.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  font-weight: 900;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  height: 600px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
 
-  .baner__content:hover {
-    text-decoration: underline;
-    text-decoration-color: #2196f3;
-    text-decoration-thickness: 3px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .filter__list {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    list-style: none;
-    display: inline-flex;
-    justify-content: space-between;
-    gap: 8px;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .btn {
-    background-color: #f5f4fa;
-    cursor: pointer;
-    border-radius: 4px;
-    padding: 10px 26px;
-    text-decoration: none;
-    color: #212121;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-    font-weight: 500;
-  }
-  
-  .btn:hover {
-    background-color: #2196f3;
-    text-decoration: none;
-    color: white;
-    box-shadow: 4px 4px 6px 0px #00000029, 0px 4px 4px 0px #0000000f,
-      0px 1px 1px 0px #0000001f;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  
-  
-  
+.baner__content {
+  font-family: $primaryFont;
+  font-size: 44px;
+  width: 696px;
+  text-transform: uppercase;
+  color: $primaryColor;
+  text-align: center;
+  margin-bottom: 30px;
+&:hover, 
+&:focus {
+  text-decoration: underline;
+  text-decoration-color: $accentColor;
+  text-decoration-thickness: 3px;
+  transition: text-decoration-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+}
+
+.filter__list {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  list-style: none;
+  display: inline-flex;
+  justify-content: space-between;
+  gap: 8px;
+  padding: 0;
+  margin: 0;
+}
+
+.btn {
+  background-color: $bgTeamColor;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 10px 26px;
+  text-decoration: none;
+  color: $secondaryColor;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  font-weight: 500;
+&:hover {
+  background-color: $accentColor;
+  text-decoration: none;
+  color: $primaryColor;
+  box-shadow: 4px 4px 6px 0px $thirdShadowColor, 0px 4px 4px 0px #0000000f,
+    0px 1px 1px 0px $secondaryShadowColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+}
