--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,95 +1,103 @@
 .mail__icon {
-    --color4: currentColor;
-    fill: var(--color4);
-    height: 12px;
-    width: 16px;
-    margin-right: 10px;
+  fill: $iconColor;
+  height: 12px;
+  width: 16px;
+  margin-right: 10px;
+  &:hover {
+    fill: $accentColor;
   }
-  
-  .phone__icon {
-    --color4: currentColor;
-    fill: var(--color4);
-    height: 16px;
-    width: 10px;
-    margin-right: 10px;
-  }
-  
-  .contact__item {
-    font-size: 14px;
-    font-weight: 500;
-  }
-  
-  .contact__list {
-    text-decoration: none;
-    list-style: none;
-    display: flex;
-    gap: 30px;
-    align-items: baseline;
-    padding-left: 380px;
-  }
-  
-  .contact__list:last-child {
-    margin: 0;
-  }
+}
 
-  .menu {
-    display: flex;
-    max-width: 1170px;
-    justify-content: flex-start;
-    align-items: center;
+.phone__icon {
+  fill: $iconColor;
+  height: 16px;
+  width: 10px;
+  margin-right: 10px;
+  &:hover {
+    fill: $accentColor;
   }
-  
-  .logo:hover {
+}
+
+.contact__item {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.contact__list {
+  text-decoration: none;
+  list-style: none;
+  display: flex;
+  gap: 30px;
+  align-items: baseline;
+  padding-left: 380px;
+}
+
+.contact__list:last-child {
+  margin: 0;
+}
+
+.menu {
+  display: flex;
+  max-width: 1170px;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.logo {
+  text-decoration: none;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.19;
+  font-family: $secondaryFont;
+  font-style: normal;
+  margin: 0;
+  &:hover,
+  &:focus {
     text-decoration: underline;
-    color: #2196f3;
+    text-decoration-color: $accentColor;
     text-decoration-thickness: 3px;
+    transition: text-decoration-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+.nav__list {
+  list-style: none;
+  display: inline-flex;
+  gap: 30px;
+  &:hover,
+  &:focus {
+    color: $accentColor;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  
-  .logo {
-    text-decoration: none;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.19;
-    font-family: "raleway";
-    font-style: normal;
-    margin: 0;
+}
+.nav__link {
+  color: $secondaryColor;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.17;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus,
+  &:active {
+    color: $accentColor;
   }
-  
-  .nav__list {
-    list-style: none;
-    display: inline-flex;
-    gap: 30px;
-  }
-  
-  .nav__link:hover {
-    color: #2196f3;
+}
+
+.contact__link {
+  display: flex;
+  color: $textColor;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.17;
+  text-decoration: none;
+  align-items: center;
+  justify-content: center;
+  &:hover,
+  &:focus {
+    color: $accentColor;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  
-  .nav__link {
-    color: #212121;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.17;
-    border-radius: 6px;
-    text-decoration: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .contact__link {
-    display: flex;
-    color: var(--color-third);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.17;
-    text-decoration: none;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .contact__link:hover {
-    color: var(--color-four);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
+}
+
