--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,41 +1,3 @@
-.mail__icon {
-  fill: $iconColor;
-  height: 12px;
-  width: 16px;
-  margin-right: 10px;
-  &:hover {
-    fill: $accentColor;
-  }
-}
-
-.phone__icon {
-  fill: $iconColor;
-  height: 16px;
-  width: 10px;
-  margin-right: 10px;
-  &:hover {
-    fill: $accentColor;
-  }
-}
-
-.contact__item {
-  font-size: 14px;
-  font-weight: 500;
-}
-
-.contact__list {
-  text-decoration: none;
-  list-style: none;
-  display: flex;
-  gap: 30px;
-  align-items: baseline;
-  padding-left: 380px;
-}
-
-.contact__list:last-child {
-  margin: 0;
-}
-
 .menu {
   display: flex;
   max-width: 1170px;
@@ -60,44 +22,84 @@
   }
 }
 
+.contact__list {
+  text-decoration: none;
+  list-style: none;
+  display: flex;
+  gap: 30px;
+  align-items: baseline;
+  padding-left: 380px;
+
+  .contact__item {
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  .contact:last-child {
+    margin: 0;
+  }
+ .contact__link {
+    display: flex;
+    color: $textColor;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.17;
+    text-decoration: none;
+    align-items: center;
+    justify-content: center;
+    &:hover,
+    &:focus {
+      color: $accentColor;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+}
+
+.mail__icon {
+  fill: $iconColor;
+  height: 12px;
+  width: 16px;
+  margin-right: 10px;
+  &:hover {
+    fill: $accentColor;
+  }
+}
+
+.phone__icon {
+  fill: $iconColor;
+  height: 16px;
+  width: 10px;
+  margin-right: 10px;
+  &:hover {
+    fill: $accentColor;
+  }
+}
+
 .nav__list {
   list-style: none;
   display: inline-flex;
   gap: 30px;
+  
+  .nav__link {
+    color: $secondaryColor;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.17;
+    border-radius: 6px;
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus,
+    &:active {
+      color: $accentColor;
+    }
+  }
   &:hover,
   &:focus {
     color: $accentColor;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-.nav__link {
-  color: $secondaryColor;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.17;
-  border-radius: 6px;
-  text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus,
-  &:active {
-    color: $accentColor;
-  }
-}
+  }  
 
-.contact__link {
-  display: flex;
-  color: $textColor;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.17;
-  text-decoration: none;
-  align-items: center;
-  justify-content: center;
-  &:hover,
-  &:focus {
-    color: $accentColor;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
+}  
+
 
